# robot-intake

./: README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: toy_mdp_experiment.py  toy_random_experiment.py
src/robot_intake/: utils.py
src/robot_intake/algorithms/: policy_evaluation.py  value_iteration.py
src/robot_intake/approaches/: base_approach.py  greedy_maximization_approach.py  oracle_approach.py  random_approach.py
src/robot_intake/calibrators/: base_calibrator.py  toy_calibrator.py
src/robot_intake/envs/: calibrative_mdp.py  hip_mdp.py  mdp.py  toy_calibrative_mdp.py  toy_multitask.py
tests/: test_utils.py
tests/approaches/: test_random_approach.py
tests/envs/: test_toy_calibrative_mdp.py
